--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "fw/components/littlefs"]
 	path = fw/components/littlefs
-	url = https://github.com/littlefs-project/littlefs.git
+	url = https://ghproxy.com/https://github.com/littlefs-project/littlefs.git
