--- a/.github/workflows/taiwan.yml
+++ b/.github/workflows/taiwan.yml
@@ -1,10 +1,8 @@
 name: pixl.js-fw
 
 on:
-  push:
-    branches: [ "taiwan"]
-    tags:  ["*"]
-  workflow_dispatch:
+  schedule:
+    - cron: '0 18 * * *'
 
 jobs:
   build:
@@ -12,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     container: solosky/nrf52-sdk:latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
       with:
-        submodules: 'true'
+        ref: taiwan
 
     - name: Change Owner of Container Working Directory
       run: chown root:root .
