--- a/.github/workflows/taiwan.yml
+++ b/.github/workflows/taiwan.yml
@@ -1,8 +1,10 @@
 name: pixl.js-fw
 
 on:
-  schedule:
-    - cron: '58 17 * * *'
+  push:
+    branches: [ "taiwan"]
+    tags:  ["*"]
+  workflow_dispatch:
 
 jobs:
   build:
