--- a/.github/workflows/taiwan.yml
+++ b/.github/workflows/taiwan.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
+        submodules: 'true'
         ref: taiwan
 
     - name: Change Owner of Container Working Directory
